feat: update social links - add GitHub URL, remove WeChat, update Twitter to X icon

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,17 +8,14 @@
       </h1>
       <p class="hero-subtitle f4 mb4">热爱技术，分享生活</p>
       <div class="social-links">
-        <a href="#" class="social-link" aria-label="GitHub">
+        <a href="https://github.com/razerzhang" class="social-link" aria-label="GitHub">
           <i class="fab fa-github"></i>
         </a>
         <a href="#" class="social-link" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#" class="social-link" aria-label="Twitter">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="social-link" aria-label="WeChat">
-          <i class="fab fa-weixin"></i>
+        <a href="#" class="social-link" aria-label="X">
+          <i class="fab fa-x-twitter"></i>
         </a>
       </div>
     </div>
