--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,7 +34,7 @@
         <div class="footer-inner">
           <span>&copy; {{ now.Format "2006" }} {{ .Site.Params.author }}. 保留所有权利。</span>
           <div class="footer-socials">
-            <a href="{{ with .Site.Params.github }}{{ . }}{{ else }}#{{ end }}" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/razerzhang" aria-label="GitHub"><i class="fab fa-github"></i></a>
             <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="#" aria-label="X"><i class="fab fa-x-twitter"></i></a>
           </div>
