--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -18,7 +18,7 @@
 
     {{ block "extra_head" . }}{{ end }}
   </head>
-  <body class="ma0 avenir bg-near-white production">
+  <body class="ma0 avenir bg-white production">
     {{ block "header" . }}
       <header>
         {{ partial "nav.html" . }}
@@ -35,7 +35,7 @@
           <span>&copy; {{ now.Format "2006" }} {{ .Site.Params.author }}. 保留所有权利。</span>
           <div class="footer-socials">
             <a href="https://github.com/razerzhang" aria-label="GitHub"><i class="fab fa-github"></i></a>
-            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/runzhe-zhang-350427321/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <a href="#" aria-label="X"><i class="fab fa-x-twitter"></i></a>
           </div>
         </div>
