--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,12 +1,12 @@
 {{ $home := .Site.Home.RelPermalink }}
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="{{ $home }}" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="{{ $home }}" class="f3 fw2 no-underline dib nav-brand">
       {{ .Site.Title }}
     </a>
     <div class="flex-l items-center">
-      <a href="{{ relLangURL "posts/" }}" class="f5 fw4 hover-white no-underline white-70 mr3 mr4-ns">博客</a>
-      <a href="{{ printf "%s#contact" $home }}" class="f5 fw4 hover-white no-underline white-70">联系</a>
+      <a href="{{ relLangURL "posts/" }}" class="f5 fw4 no-underline nav-link mr3 mr4-ns">博客</a>
+      <a href="{{ printf "%s#contact" $home }}" class="f5 fw4 no-underline nav-link">联系</a>
     </div>
   </div>
 </nav>
